[package]
name = "processing"
version = "0.3.2"
authors = ["Robert Ennis <Robert.Ennis@psychol.uni-giessen.de>"]
description = """
  An implementation of the Processing environment for Rust, with influences from Cinder and
  openFrameworks. It is written with Glium and has a Glutin and a GLFW backend. Tested so far
  on macOS and Linux. It has been developed by Robert Ennis in the lab of Katja Doerschner,
  a part of the Allgemeine Psychologie Department at the Justus-Liebig Universitaet of Giessen.
"""
license = "MIT"
repository = "https://github.com/rennis250/processing-rs"
keywords = ["processing", "opengl", "generative", "art", "psychophysics"]
exclude = [
  "benches/*",
  "test.jpg"
]
build = "build.rs"

[dependencies]
glium = "0.32.1"
gl = "0.14.0"
nalgebra = "0.31.4"
image = "0.24.5"
owning_ref = "0.4.1"
glfw = "0.47.0"

[build-dependencies]
cc = "1.0"

#[features]
#default = []
#glfwp5 = ["glfw"]

#[dependencies.glfw]
#default-features = false
#version = "0.47.0"
#features = ["image"]
#optional = true

[dev-dependencies]
rand = "0.5.5"
num-traits = "0.2.15"
time = "0.1.38"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"
